# qtable

./: .gitignore  README.md  pyproject.toml
qtable/: colfilters.py  main.py  newtable.py  supertable.py
vtable/: colfilters.py  filteredtablemodel.py  main.py  newtable.py  supertable.py
